# madrona_physics

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
data/urdf/: franka_lnd.urdf  mjmodel.xml  mjmodel_nocollision.xml
data/urdf/meshes/: link0.mtl  link3.mtl  link6.mtl  link7.mtl
data/urdf/meshes/dae/: link1.mtl  link2.mtl
data/urdftest/: franka_lnd.test.urdf  franka_lnd.urdf  link4.mtl  link5.mtl
scripts/: A_matrix.py  conjugate_gradient.py  dual_solve.py  friction_cone.py  headless.py  imgui.ini  lcp_solve.py  line_search.py  line_searches.py  matrix_wrappers.py  mjx_bench.py  newton.py  reduced_primal.py  run.py  test.py  trust_newton.py
src/: CMakeLists.txt  bindings.cpp  consts.hpp  headless.cpp  import.cpp  import.hpp  load.cpp  load.hpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  sim.inl  types.hpp  viewer.cpp
